# sdev220-spring2022

./: README.md  git-instructions.txt  gitGUI-instructions.txt  import python modules directly from github instructions  payroll_gui.py  pyproject.toml  setup.cfg  test  test.txt
april five/: directories.py  recursive.py
blah blah/: list.txt  untitled0.py
bunch of 2's/: payroll_gui.py  payroll_gui1.py  tabs.py
class-125/: Untitled.ipynb  anothertest.py  testing123.py
class-21/: untitled0.py  untitled2.py
class-214-abstract/: Untitled3.ipynb  untitled3.py
class-stuff-23/examples/: untitled1.py
class-stuff-23/pyOffice/: payroll.py
class1/: disc.py
datastructures/: binarysearchtree.py  class_sort_example.py  custom stack.py  datastructures.py  employees.txt  exception.py  queue test.py  stack test.py  test linked list.py  testing bst.py
decorators/: decorators.py
git-bash-instructions/: git-instructions.txt
lecture1practice/: Untitled.ipynb  test1.py  test2.py
module2practice/: interface_replacement.py  testSetup.py
odds and ends/: other_stuff.py  threads.py  untitled0.py
parallel/: example.py
pyOffice/: employees.py  payroll.py  untitled1.py
pyOffice/html/pyOffice/: index.html  payroll.html
scratch/: SayHi.py
serial/: serial_example.py
sets/: sets.py
testing/: Untitled.ipynb  exmp.py  untitled0.py
testing123/: scratch.txt
transfer_data/: compatible.py  dataFile1.csv  dataFile1.json  dataFile1.xml  dataFile2.db  dataFile2.per  person.py  store_data.py
