[metadata]
name = testing
version = 0.0.1
author = chris francis
author_email = author@example.com
description = A small example package for an upcoming software development class reference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francis-chris5/sdev220-spring2022
project_urls =
    Bug Tracker = https://github.com/francis-chris5/sdev220-spring2022/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = testing
packages = testing
python_requires = >=3.6
